fixed images getting cut off close #29

--- a/source/stylesheets/home.css.scss
+++ b/source/stylesheets/home.css.scss
@@ -1,5 +1,5 @@
 .home {
-  #minus_buffer { margin-top: 40px; }
+
 
   #slideshow {
     box-sizing: border-box;
@@ -70,3 +70,5 @@
     }
   }
 }
+
+.wmuSlider + .container .categories { margin-top: 40px; }
